--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,3 +61,5 @@ module = "tests.*"
 allow_untyped_defs = true
 disable_error_code = "attr-defined"
 
+[project.scripts]
+myaiproject = "myaiproject.__main__:main"
